' Generated by UML Generator
' Encoded: lLXBR-Cs4BxxL_18D_AYPwCDrdcqTP5q5qcsG57qG4cqmaOY3PBEhhkFtrwIagWPIdQD0iab26T6dEyRpSjwQopJTjVKC_Cav9Pfrf2YPiQihDKYtrc-BfIy5_zmyltiKPIS548NDP_DWXMvuwmKihfJgY6VPuGiSgMUp5fwmPBS26D_k72ISwzQk3zdu04gMSENvDuvabL6x7uBJWNRiaBO_P88QJFooCn5pOgdN35TBedpKdCcCx8pNA_bvIFJbNluWpjbv024kNSlv4RHUUzczhNdSQcQhIEh8v5liXUP024IW9OlnI3nVHIvVw8DFGJZpsQdlSX0MIa5FFA6YHeARBsHyFotof7zf-qVd86GC0yQXiV3ISAIuiW8G94HXC454I382F3lBA7tZFI-GtWCjwkAqoXRacSboaxpctEFG67rVGUGfaYnsPKK5237oclFWY8ksE31yQAG75R_gd8Ao2QNTyGfYW2mgLhsy_vTU44WFGTlpmiZrLJXoQMobbCg3KHIeOS_Uhn7FS0IvevReNdfPLq974lkeQ-aoGrhpPzHjNc1holN1OphML4sNODU8ypgsP5bUSsHFDpITH6VskVaHoBvHxBIcks3z9pEUqDSnaFBUx5ECJyjln-SDmfTOlLbvvuY7DZc5uY9JYF4Jwo7YDAfw6Bh3u0RdI2AKdqoimF9L1YfeSh0P70cLXZvIEdH63yFyPK8_pmcm1bWVcigZ0z5SQHDIi99V5X-LjmbDTt5i7GGlExwax1ch3AFwcD0FLLWLw8IbjL-GBPrjb6wOHQD4KVszc99DhLYGvy73r8hR0tIMPWST71U2gkqOA35rqnMmqc-Tqsxx-bxrp2wVwUI9YCOdnik4DtHGVcURRcEHB_Lgc1MA3Jj0hDezwgyKZX7gGol2q5i6rcEA8rWUY446fhh0DKV8zXZdJ74wfN3rFUx1-yH-qsRJouf19BCqnuK7S73XZSEAeLuaxqYOAU00jRxyKSZf__T7wkUSThU0itHs8taKarWamex3gYR1Tn8ShWd7kjmmloaD1ULF77StuXSCxsVdlYiB3KtQ9jLMouVH3CC-A9MXYD9-340VmOS6k3QJUdUq4_ievF-f9KWL4X7APd_2PUC82Pk8q0yJXppg_PIcboEZTvrZYZoc2m4lNUQuFZlATnZIENHBSggmH5S4RsjA-x1wU7CwSPR7sIaS648xGcWrhnHppn83pO7fej7Rt6nd-uoNjTTxzFaoXMQgg2JJa5r-Ftf_nqX66s4487Zu_LcJ3CMseHUyqBfydTXX0txKzm2y3wqqvhBTebPIn2sVbV0cyoxJK0wt9UHCQjOlTVDjbPxpjloDQnsTySwt2g7R6hSza-zyez6vs40c94Ktj7nUyk432JFFXlhfdRnbJWuahgGHRn__ZMApxtTbNlmWU71lyhawqAqUR5F2y3hSPAyoVil2qtuVrr6hBLBeejJEsiWrbxtwYyP8NUhnnJk0s60dxOMYo_d8UcHL2qMRJk0mZTlpjlj7trI6Yv0ucWSxnjEt_KdkAE7UuBFOPqTPFtyZC2W87Y7Wd1vBDfmIn0DUJgW7cGHSfSWmtET83f_osMvQ-f_0G
' URL: http://www.plantuml.com/plantuml/uml/lLXBR-Cs4BxxL_18D_AYPwCDrdcqTP5q5qcsG57qG4cqmaOY3PBEhhkFtrwIagWPIdQD0iab26T6dEyRpSjwQopJTjVKC_Cav9Pfrf2YPiQihDKYtrc-BfIy5_zmyltiKPIS548NDP_DWXMvuwmKihfJgY6VPuGiSgMUp5fwmPBS26D_k72ISwzQk3zdu04gMSENvDuvabL6x7uBJWNRiaBO_P88QJFooCn5pOgdN35TBedpKdCcCx8pNA_bvIFJbNluWpjbv024kNSlv4RHUUzczhNdSQcQhIEh8v5liXUP024IW9OlnI3nVHIvVw8DFGJZpsQdlSX0MIa5FFA6YHeARBsHyFotof7zf-qVd86GC0yQXiV3ISAIuiW8G94HXC454I382F3lBA7tZFI-GtWCjwkAqoXRacSboaxpctEFG67rVGUGfaYnsPKK5237oclFWY8ksE31yQAG75R_gd8Ao2QNTyGfYW2mgLhsy_vTU44WFGTlpmiZrLJXoQMobbCg3KHIeOS_Uhn7FS0IvevReNdfPLq974lkeQ-aoGrhpPzHjNc1holN1OphML4sNODU8ypgsP5bUSsHFDpITH6VskVaHoBvHxBIcks3z9pEUqDSnaFBUx5ECJyjln-SDmfTOlLbvvuY7DZc5uY9JYF4Jwo7YDAfw6Bh3u0RdI2AKdqoimF9L1YfeSh0P70cLXZvIEdH63yFyPK8_pmcm1bWVcigZ0z5SQHDIi99V5X-LjmbDTt5i7GGlExwax1ch3AFwcD0FLLWLw8IbjL-GBPrjb6wOHQD4KVszc99DhLYGvy73r8hR0tIMPWST71U2gkqOA35rqnMmqc-Tqsxx-bxrp2wVwUI9YCOdnik4DtHGVcURRcEHB_Lgc1MA3Jj0hDezwgyKZX7gGol2q5i6rcEA8rWUY446fhh0DKV8zXZdJ74wfN3rFUx1-yH-qsRJouf19BCqnuK7S73XZSEAeLuaxqYOAU00jRxyKSZf__T7wkUSThU0itHs8taKarWamex3gYR1Tn8ShWd7kjmmloaD1ULF77StuXSCxsVdlYiB3KtQ9jLMouVH3CC-A9MXYD9-340VmOS6k3QJUdUq4_ievF-f9KWL4X7APd_2PUC82Pk8q0yJXppg_PIcboEZTvrZYZoc2m4lNUQuFZlATnZIENHBSggmH5S4RsjA-x1wU7CwSPR7sIaS648xGcWrhnHppn83pO7fej7Rt6nd-uoNjTTxzFaoXMQgg2JJa5r-Ftf_nqX66s4487Zu_LcJ3CMseHUyqBfydTXX0txKzm2y3wqqvhBTebPIn2sVbV0cyoxJK0wt9UHCQjOlTVDjbPxpjloDQnsTySwt2g7R6hSza-zyez6vs40c94Ktj7nUyk432JFFXlhfdRnbJWuahgGHRn__ZMApxtTbNlmWU71lyhawqAqUR5F2y3hSPAyoVil2qtuVrr6hBLBeejJEsiWrbxtwYyP8NUhnnJk0s60dxOMYo_d8UcHL2qMRJk0mZTlpjlj7trI6Yv0ucWSxnjEt_KdkAE7UuBFOPqTPFtyZC2W87Y7Wd1vBDfmIn0DUJgW7cGHSfSWmtET83f_osMvQ-f_0G
' Generated on: 2025-11-19T22:37:21.844858104

@startuml Library
skinparam classAttributeIconSize 0
hide circle

class ReadingRoom {
  -booksInRoom: List<Book>
  --
  +ReadingRoom(name: String, type: String, capacity: int, hasBlackboard: boolean, userInCharge: User, booksInRoom: List<Book>)
  +info(): String
}

class ComputerRoom {
  ~nComputers: int
  --
  +ComputerRoom(name: String, type: String, capacity: int, hasBlackboard: boolean, userInCharge: User, nComputers: int)
  +info(): String
}

class User {
  -name: String
  -surnames: String
  -dni: String
  -email: String
  -tlfn: String
  -job: String
  -expYears: int
  -age: int
  --
  +User(name: String, surnames: String, dni: String, email: String, tlfn: String, job: String, expYears: int, age: int)
  +setAge(age: int): void
  +setName(name: String): void
  +setSurnames(surnames: String): void
  +setDni(dni: String): void
  +setEmail(email: String): void
  +setTlfn(tlfn: String): void
  +setJob(job: String): void
  +setExpYears(expYears: int): void
  +getAge(): int
  +getName(): String
  +getSurnames(): String
  +getDni(): String
  +getEmail(): String
  +getTlfn(): String
  +getJob(): String
  +getExpYears(): int
  +isRetired(): boolean
  +info(): String
}

class Room {
  -name: String
  -type: String
  -capacity: int
  -usersInside: int
  -hasBlackboard: boolean
  -isAvailable: boolean
  -users: List<User> = new ArrayList<>()
  -userInCharge: User
  --
  +Room(name: String, type: String, capacity: int, hasBlackboard: boolean, userInCharge: User)
  +setName(name: String): void
  +setType(type: String): void
  +setCapacity(capacity: int): void
  +setHasBlackboard(hasBlackboard: boolean): void
  +setIsAvailable(isAvailable: boolean): void
  +setUserInCharge(userInCharge: User): void
  +getName(): String
  +getType(): String
  +getCapacity(): int
  +getHasBlackboard(): boolean
  +getIsAvailable(): boolean
  +getUsersSize(): int
  +getUserInCharge(): User
  +isAvailableMsg(): String
  +hasBlackboardMsg(): String
  +info(): String
  +userGoesIn(u: User): int
  +userExits(u: User): int
  +showUsers(): String
}

class DigitalBook {
  -format: String
  -sizeMB: float
  --
  +DigitalBook(title: String, isbn: String, editorial: String, lang: String, nPages: int, year: int, isAvailable: boolean, format: String, sizeMB: float)
  +info(): String
}

class PaperBook {
  ~location: String
  --
  +PaperBook(title: String, isbn: String, editorial: String, lang: String, nPages: int, year: int, isAvailable: boolean, location: String)
  +info(): String
}

class Book {
  -title: String
  -isbn: String
  -editorial: String
  -lang: String
  -nPages: int
  -year: int
  -isAvailable: boolean
  --
  +Book(title: String, isbn: String, editorial: String, lang: String, nPages: int, year: int, isAvailable: boolean)
  +setTitle(title: String): void
  +setIsbn(isbn: String): void
  +setEditorial(editorial: String): void
  +setLang(lang: String): void
  +setNPages(nPages: int): void
  +setYear(year: int): void
  +setIsAvailable(isAvailable: boolean): void
  +getTitle(): String
  +getIsbn(): String
  +getEditorial(): String
  +getLang(): String
  +getNPages(): int
  +getYear(): int
  +getIsAvailable(): boolean
  +isAvailableMsg(): String
  +isForeign(): boolean
  +info(): String
}

class Library {
  -name: String
  -address: String
  -openTime: int
  -closeTime: int
  -books: List<Book> = new ArrayList<>()
  -rooms: List<Room> = new ArrayList<>()
  -users: List<User> = new ArrayList<>()
  --
  +Library(name: String, address: String, openTime: int, closeTime: int)
  +setName(name: String): void
  +setAddress(address: String): void
  +setOpenTime(openTime: int): void
  +setCloseTime(closeTime: int): void
  +getName(): String
  +getAddress(): String
  +getOpenTime(): int
  +getCloseTime(): int
  +isOpen(time: int): boolean
  +info(): String
  +showLibrary(): String
  +addBook(): void
  +removeBook(isbn: String): void
  +searchBookByTitle(title: String): Book
  +addRoomDialog(): void
  +addRoom(room: Room): void
  +removeRoom(name: String): void
  +showRooms(): String
  +showAvailableRooms(): String
  +recordVisit(user: User): String
  +getCurrentUsersInLibrary(): int
  +setUserInChargeOfRoom(user: User, room: Room): void
}

class Employee {
  -salary: int
  -position: String
  --
  +Employee(name: String, surnames: String, dni: String, email: String, tlfn: String, job: String, expYears: int, age: int, salary: int, position: String)
  +info(): String
}

class Main {
  +{static} main(args: String[]): void
}

class StudyRoom {
  ~nTables: int
  --
  +StudyRoom(name: String, type: String, capacity: int, hasBlackboard: boolean, userInCharge: User, nTables: int)
  +info(): String
}

class Member {
  -memberId: int
  -lentBooks: List<Book> = new ArrayList<>()
  --
  +Member(name: String, surnames: String, dni: String, email: String, tlfn: String, job: String, expYears: int, age: int, memberId: int, lentBooks: List<Book>)
  +info(): String
}

ReadingRoom --|> Room
ReadingRoom o-- Book
ReadingRoom ..> User
ComputerRoom --|> Room
ComputerRoom ..> User
Room o-- User
Room *-- User
DigitalBook --|> Book
PaperBook --|> Book
Library o-- Book
Library o-- Room
Library o-- User
Employee --|> User
StudyRoom --|> Room
StudyRoom ..> User
Member --|> User
Member o-- Book
@enduml